--- a/Taskly/Base.lproj/Main.storyboard
+++ b/Taskly/Base.lproj/Main.storyboard
@@ -101,7 +101,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="HFx-03-YH4">
-                                <rect key="frame" x="0.0" y="306" width="600" height="245"/>
+                                <rect key="frame" x="0.0" y="332" width="600" height="219"/>
                             </mapView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" editable="NO" text="Task details" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lKs-T3-H6m">
                                 <rect key="frame" x="0.0" y="99" width="600" height="97"/>
@@ -135,11 +135,30 @@
                         <outlet property="priceLabel" destination="c6q-cj-DVL" id="LHh-x3-Y3G"/>
                         <outlet property="taskDetails" destination="lKs-T3-H6m" id="kBS-oU-7c3"/>
                         <outlet property="taskTitle" destination="GOa-aU-bEE" id="5wj-JQ-l6Q"/>
+                        <segue destination="ggY-Gi-TIR" kind="show" identifier="toRespondPage" id="gi0-yk-dhj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x8y-sq-S6N" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="186" y="-1056"/>
+        </scene>
+        <!--Respond To Task View Controller-->
+        <scene sceneID="Ud4-Wn-8po">
+            <objects>
+                <viewController id="ggY-Gi-TIR" customClass="RespondToTaskViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="h9Y-KP-2UW"/>
+                        <viewControllerLayoutGuide type="bottom" id="HRQ-BC-u9m"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9t1-5S-093">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XIv-Rq-Myc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="897" y="-1056"/>
         </scene>
         <!--New Task View Controller-->
         <scene sceneID="wg7-f3-ORb">
