--- a/Taskly/Base.lproj/Main.storyboard
+++ b/Taskly/Base.lproj/Main.storyboard
@@ -463,11 +463,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="ZDF-kz-enQ">
-                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="ZDF-kz-enQ">
+                                <rect key="frame" x="0.0" y="64" width="600" height="226"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="taskCell" textLabel="s8Z-Z3-1Y0" detailTextLabel="84p-Hx-ArZ" style="IBUITableViewCellStyleSubtitle" id="dy3-6i-aK5">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ownedTaskCell" textLabel="s8Z-Z3-1Y0" detailTextLabel="84p-Hx-ArZ" style="IBUITableViewCellStyleSubtitle" id="dy3-6i-aK5">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dy3-6i-aK5" id="1RP-mB-gWY">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -493,10 +493,44 @@
                                     <outlet property="delegate" destination="6ED-uk-49a" id="Qe3-Tz-UQ6"/>
                                 </connections>
                             </tableView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Wnf-TC-3sU">
+                                <rect key="frame" x="0.0" y="345" width="600" height="206"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="fillingTaskCell" textLabel="pVV-Zf-C74" detailTextLabel="HI3-mT-rzz" style="IBUITableViewCellStyleSubtitle" id="JyX-GS-8mo">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JyX-GS-8mo" id="apq-4d-jmG">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="pVV-Zf-C74">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="HI3-mT-rzz">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="6ED-uk-49a" id="yM6-1U-haU"/>
+                                    <outlet property="delegate" destination="6ED-uk-49a" id="d3C-hf-2Xq"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="Wnf-TC-3sU" firstAttribute="width" secondItem="ebL-BM-3c8" secondAttribute="width" id="1ku-bY-8Wh"/>
+                            <constraint firstItem="LrL-5f-Vyw" firstAttribute="top" secondItem="Wnf-TC-3sU" secondAttribute="bottom" id="5LC-PD-1gl"/>
+                            <constraint firstItem="ZDF-kz-enQ" firstAttribute="top" secondItem="mJ3-r8-eBN" secondAttribute="bottom" id="JK9-50-CP1"/>
                             <constraint firstItem="ZDF-kz-enQ" firstAttribute="width" secondItem="ebL-BM-3c8" secondAttribute="width" id="Kag-sX-pDQ"/>
+                            <constraint firstItem="Wnf-TC-3sU" firstAttribute="top" secondItem="ZDF-kz-enQ" secondAttribute="bottom" constant="55" id="wt0-jh-rdf"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="zXQ-Du-mmC">
@@ -507,7 +541,8 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="taskTable" destination="ZDF-kz-enQ" id="DJR-AT-oPs"/>
+                        <outlet property="fillingTaskTable" destination="Wnf-TC-3sU" id="yvD-Oc-IiH"/>
+                        <outlet property="ownedTaskTable" destination="ZDF-kz-enQ" id="R2Z-Df-M3U"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rPr-QW-oyY" userLabel="First Responder" sceneMemberID="firstResponder"/>
